src/tests/errors/lexing-reintegrate/test03.cmp
program main 
begin
    var x : 2int  /* wrong identifier */
end 